# YimMenu

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTO_DRIVE.ipch  BigBaseV2.lnk  BigBaseV2.sln  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  FEATURES.md  GenerateProjects.bat  Important for creators  LICENSE  README.md  SechsMenu.lnk  TODO.md  VEHICLE_PREVIEW_SERVICE.ipch  YimMenu.lnk  metadata.json  premake5.lua  pt-BR.json  script.bat  todo.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  build_issue.yml  feature_request.md  feature_request.yml  improvement_request.yml
.github/workflows/: Rebase_Upstream.yml  autocloser.yml  autolocker.yml  ci.yml  cmake.yml  codeql-analysis.yml  gta_data.yml  nightly.yml  pr-comment.yml  rebase_upstream.yml  release.yml  sync.yml  update.yml
BigBaseV2/: LSCTab.cpp  LSCTab.h  ModelAttachment.h  PersistCar.cpp  PersistCar.h  Superman.cpp  cpp.hint  drive_on_water.cpp  freezeplayer.cpp  headlight_multiplier.cpp  jump_around.cpp  jumparound.cpp  resource.h  rgb_paint.cpp  shakecam.cpp  to_to_waypoint.cpp  write_player_game_state_data_node.cpp
BigBaseV2/src/: LSCTab.cpp  LSCTab.h  aimbot.cpp  common.hpp  crossmap.hpp  detour_hook.cc  detour_hook.cpp  detour_hook.hpp  features.cpp  features.hpp  fiber_pool.cpp  file_manager.hpp  fonts.cpp  fonts.hpp  function_types.hpp  gta_util.hpp  gui.cpp  gui.hpp  hooking.cpp  hooking.hpp  imguibitfield.h  invoker.cpp  invoker.hpp  logger.hpp  main.cpp  natives.hpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  script.cpp  script.hpp  script_hook.cpp  script_local.hpp  script_mgr.cpp  script_mgr.hpp  settings.h  shv_runner.cpp  shv_runner.h  shv_runner.hpp  (+2 more)
Vehicle jsons/: 6x6WarRC.json  BikerBot.json  CardboardCar.json  ClassicCarMix.json  FiddlerTheClown.json  FlatBed&SlamVan.json  FlatBed&T20.json  MilitaryFightSquad.json  ModdedCarbonRS.json  ModdedT20.json  MonsterDigger.json  MonsterSwat.json  Muscle1.json  PantoHotknife.json  PenisTruck.json  Police.json  PoliceCrownVic.json  RampTruck.json  RollerCoasterCar.json  SnowScooter.json  Special.json  SpeederPrototype.json  SubCopter.json  Super1.json  TankMech.json  Tiefighter.json  Train.json  trolleybike.json
cmake/: README.md  asmjit.cmake  async-logger.cmake  cpr.cmake  git.cmake  gtav-classes.cmake
docs/: SETUP.md  VSC.md
docs/chat translator/: setup_LibreTranslate_with_docker.md
docs/lua/: commands.md  commands_dump.txt  doc_gen.py  infraction.md  tabs.md
screenshots/: logo.xcf
scripts/: GTAV-Classes.cmake  MinHook.cmake  README.md  async-logger.cmake  cpr.cmake  crosscompile.cmake  crossmap.txt  doc_gen.py  fix_recursive.bat  fmt.cmake  g3log.cmake  gen_proj.bat  generate_natives.py  git.cmake  gtav-classes.cmake  imgui.cmake  json.cmake  libcef.cmake  lua.cmake  minhook.cmake  natives.json  natives_gen.py  open_vs.bat  pugixml.cmake  rpclib.cmake  switch_master_update.bat  update_repo.bat  wren.cmake  zydis.cmake
src/: BigBaseV2.vcxproj  BigBaseV2.vcxproj.filters  benchmark.hpp  byte_patch_manager.cpp  byte_patch_manager.hpp  call_hook.cpp  call_hook.hpp  common.hpp  crossmap.cpp  crossmap.hpp  detour_hook.cpp  detour_hook.hpp  fiber_pool.cpp  fiber_pool.hpp  file_manager.cpp  file_manager.hpp  function_types.hpp  gta_pointers.hpp  gta_pointers_layout_info.hpp  gta_util.hpp  gui.cpp  gui.hpp  hooking.cpp  hooking.hpp  invoker.asm  invoker.cpp  invoker.hpp  json_util.hpp  logger.hpp  main.cpp  natives.cpp  natives.hpp  natives_split.py  packet.cpp  packet.hpp  pointers.cpp  pointers.hpp  renderer.cpp  renderer.hpp  sc_pointers.hpp  (+22 more)
src/asi_loader/: asi_scripts.cpp  pe_image.cpp  pe_image.h  pools.cpp  script_manager.cpp  script_manager.h
src/backend/: backend.cpp  backend.hpp  bool_command.cpp  bool_command.hpp  command.cpp  command.hpp  command_arguments.hpp  float_command.cpp  float_command.hpp  int_command.cpp  int_command.hpp  looped_command.cpp  looped_command.hpp  player_command.cpp  player_command.hpp  script_patches.hpp
src/cef/: cef_service.cpp  cef_service.hpp  composition.cpp  composition.hpp  d3d11.cpp  d3d11.hpp  frame_buffer.cpp  frame_buffer.hpp  helper.hpp  layer.cpp  layer.hpp  rect.hpp  remote_cef_client.cpp  remote_cef_client.hpp
src/core/: enums.hpp  globals.cpp  globals.hpp  logger.hpp  scr_globals.hpp  settings.cpp  settings.hpp  settings_json_serde_gen.py
src/file_manager/: file.cpp  file.hpp  folder.cpp  folder.hpp
src/fonts/: fonts.hpp  icons.cpp  storopia.cpp
src/gta/: VehicleValues.h  Vehicles.h  Weapons.h  array.hpp  blip.hpp  color.hpp  decal_controller.hpp  enums.hpp  extensible.hpp  fidevice.cpp  fidevice.hpp  fwddec.hpp  gxt2.hpp  joaat.hpp  json_serializer.hpp  matrix.hpp  natives.hpp  net_array.hpp  net_game_event.hpp  net_object_mgr.hpp  node_list.hpp  ped_factory.hpp  pickup_rewards.hpp  player.hpp  pools.hpp  ref_aware.hpp  replay.hpp  script.hpp  script_handler.cpp  script_handler.hpp  script_id.hpp  script_program.hpp  script_thread.hpp  sound.hpp  sysMemAllocator.hpp  tls_context.hpp  vector.hpp  vehicle_values.hpp  vehicles.hpp  weapon_info_manager.hpp  (+1 more)
src/gui/: gui.cpp  renderer.cpp  renderer.hpp
src/hooking/: call_hook.cpp  detour_hook.hpp  hooking.cpp  hooking.hpp  vmt_hook.cpp  vmt_hook.hpp  vtable_hook.hpp
src/hooks/: hooking.hpp
src/http_client/: http_client.cpp  http_client.hpp  proxy_mgr.cpp  proxy_mgr.hpp  proxy_protocols.hpp  proxy_settings.hpp
src/invoker/: crossmap.hpp  crossmap.txt  generate_natives.py  invoker.cpp  invoker.hpp  natives.json
src/logger/: exception_handler.cpp  exception_handler.hpp  logger.cpp  logger.hpp  stack_trace.cpp  stack_trace.hpp
src/lua/: lua_manager.cpp  lua_manager.hpp  lua_module.cpp  lua_module.hpp  lua_patch.cpp  lua_patch.hpp  sol.hpp  sol_include.hpp
src/memory/: all.hpp  batch.cpp  batch.hpp  byte_patch.cpp  byte_patch.hpp  fwddec.hpp  handle.hpp  module.cpp  module.hpp  pattern.cpp  pattern.hpp  range.cpp  range.hpp  signature.hpp
src/native_hooks/: all_scripts.hpp  am_launcher.hpp  am_pi_menu.hpp  carmod_shop.hpp  casino.hpp  creator.hpp  freemode.hpp  (+6 more)
(+1895 files in other folders)
